tooling/nargo_cli/tests/snapshots/execution_success/conditional_regression_421/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: u32, mut c: [u32; 4]) {
    if a == c[0] {
        assert(c[0] == 0);
    } else if a == c[1] {
        assert(c[1] == 0);
    } else if a == c[2] {
        assert(c[2] == 0);
    }
}
